fixed spacing for default zoom

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body, html {
 	height: 94%;
 	/*margin-left: 100px;*/
 	/*margin: auto;*/
-	padding: 10px 100px;
+	padding: 10px 100px 0;
 }
 
 #ebox {
@@ -196,7 +196,7 @@ body {
 	/*border: 5px solid #FFFFFF;*/
 	padding: 0 0;
 	background-color: #FFFFFF;
-	height: 100%;
+	height: 0%;
 	vertical-align: top;
 	margin: 0 0;
 }
@@ -219,9 +219,9 @@ body {
 
 .todo-items-list {
 	/*height: 20em;*/
-	height: 95%;
+	height: 85%;
 	list-style: none;
-	padding: 0.5em 2em 0.5em 1.5em;
+	padding: 0.5em 2em 0 1.5em;
 	/*margin: 0 0;*/
 	overflow: scroll;
 	overflow-x: hidden;
